--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Climate Action Plan, toolkit, Green House Gas Emissions, Colorado, Tiny Feet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="../static/style.css">
+    
 
 </head>
 <body>
