--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -11,11 +11,16 @@
 
 </head>
 <body>
+  <header id="main-header">
+    <h1>Tiny Feet Climate Action Planning Toolkit</h1>
+  </header>
+<center><p>A toolkit to help communities begin the process of creating a Climate Action Plan</p></center>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/sectors/read">Read</a></li>
-            <li><a href="/sectors/select">Select</a></li>
+            <li><a href="/sectors/emissions">Emissions Estimation</a></li>
+            <li><a href="/sectors/actions">Recommended Actions</a></li>
+            <li><a href="/sectors/news">News</a></li>
         </ul>
     </nav>
     {% block content %}
