Update and rename read.html to emissions.html

--- a/server/templates/emissions.html
+++ b/server/templates/emissions.html
@@ -1,36 +1,77 @@
 {% extends "base.html" %}
-{% block title %} Read {% endblock %}
+{% block title %} Emissions {% endblock %}
 {% block content %}
-<h1>Read Database Entries</h1>
+<h3>Emissions Estimation</h3>
+  <p>Emissions Estimation will display a heat map of Colorado by zip code with the data from out database. It will then take in the user region ID and display emissions totals and holistic metrics. It will also have an option to download the data from our database?</p> 
 
-<label>Choose a Sector Table:</label>
-    <select onchange="changeOptions(this)">
-    <option value="none" selected disabled hidden> 
-    Select an Option 
-    <option value="cement_and_manufacturing">Cement And Manufacturing</option>
-    <option value="electricity">Electricity</option>
-    <option value="natural_gas">Natural Gas</option>
-    <option value="otis_transportation">Transportation</option>
-    <option value="waste">Waste</option>
-    <option value="aviation">Aviation</option>
-    <option value="zip_pop">Zip Code Population</option>
-</select>
-<br><br>
+  <iframe src="http://tinyfeettoolkit.com/map/" style="height:45vw;width:100%;" title="Iframe Example"></iframe>
+  <br>
+  <br>
+  <br>
+  
+  <!-- User Region Input -->
+  <form action="Gillian-test-3.php" method="post">
+      <div>
+        <label>Zip Code/City/County</label>
+        <input type="number" name="region_ID" placeholder="Enter Location">
+        <input type="submit" name="submit_location" value="Submit">
+      </div>
+      <br>
+    </form>
+    <form action="Gillian-test-3.php" method="post">
+    </form>
+<!--Output-->
+<br>
+<p>Total Region Emissions:</p>
+<br>
 
-<div class="schema" id="cement_and_manufacturing" style="display:none">
-  <h2>cement_and_manufacturing</h2>
-  <table class="styled-table">
-      <tr>
-        <th>zip</th>
-        <th>CO2e_MetricTonsPerYear</th>
-      </tr>
-      {% for row in Cement_And_Manufacturing %}
-      <tr>
-        <td>{{row.zip}}</td>
-        <td>{{row.CO2e_MetricTonsPerYear}}</td>
-      </tr>
-      {% endfor %}
-    </table>
+<!--PIE CHART start-->
+<!--Pull Sector Totals for zipcode and use here-->
+<body>
+
+  <p>Region Emissions by Sector:</p>
+  
+  <div id="piechart"></div>
+  
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  
+  <script type="text/javascript">
+  // Load google charts
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart);
+  
+  // Draw the chart and set the chart values
+  function drawChart() {
+    var data = google.visualization.arrayToDataTable([
+    ['Sector', 'CO2e Emissions'],
+    ['Cement and Manufacturing', 8],
+    ['Waste', 2],
+    ['Energy - Electricity', 4],
+    ['Energy - Natural Gas', 2],
+    ['Transportation', 8]
+  ]);
+  
+    // Optional; add a title and set the width and height of the chart
+    var options = {'title':'Region Emissions by Sector', 'width':550, 'height':400};
+
+    var options = {backgroundColor: '#e6ffe6',
+                       'width':400,
+                       'height':300};
+  
+    // Display the chart inside the <div> element with id="piechart"
+    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+    chart.draw(data, options);
+  }
+  </script>
+  
+  </body>
+<!--PIE CHART end-->
+
+<br>
+<p>Region Holistic Community Metrics:</p>
+<br>
+  <!--Download Button-->
+  <button class="btn"><i class="fa fa-download"></i> Download All Data</button>
 </div>
 
 <div class="schema" id="electricity" style="display:none">
