--- a/server/static/style.css
+++ b/server/static/style.css
@@ -1,9 +1,10 @@
 /* ---------------------------------- body ---------------------------------- */
 body {
-    color: rgb(13, 8, 103);
-    font-family: sans-serif;
+    font-family: Arial;
 }
-
+html {
+    background-color:#e6ffe6
+}
 /* ------------------------------ nav bar items ----------------------------- */
 nav ul {
     list-style-type: none;
@@ -69,3 +70,46 @@ label {
     transform:rotate(90deg);
     height: 120px;
 }
+
+/*---Main Header and Footer----------*/
+#main-header{
+      text-align:center;
+      background-color:palegreen;
+      color:white;
+      padding:10px;
+}
+#main-footer{
+      text-align:center;
+      font-size:18px;
+}
+
+/*------------------Download Button--------------------*/
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+/*--------------Setup for Rows---------------------*/
+.row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 50%;
+  }
+
+/*------------Secondary Header Format----------------*/
+h2 {
+    font-weight: normal;
+    font-size: 18px;
+}
+
+
