--- a/server/templates/mainPages/select.html
+++ b/server/templates/mainPages/select.html
@@ -5,21 +5,22 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" ></script>
 <script type="text/javascript">
+    var testData = [['Sector', 'GHG Emissions'],
+                    ['cement_and_manufacturing',9681.44],
+                    ['waste',8679.21],
+                    ['electricity_commercial',28126.09328]];
+
     google.charts.load("current", {packages:["corechart"]});
     google.charts.setOnLoadCallback(drawChart);
     function drawChart() {
-      var data = google.visualization.arrayToDataTable([
-              {% for key, value in zipData.items() %}
-                  {% if value is string %}
-                      ['{{ key }}', '{{ value }}'],
-                  {% else %}
-                      ['{{ key }}', {{ value }}],
-                  {% endif %}
-              {% endfor %}
-      ]);
+      // Jinja "safe" filter prevents automatic html special character escaping
+      var data = google.visualization.arrayToDataTable( {{ zipData | safe }} );
 
       var options = {
-        title: 'Sector Emissions Data (Metric Tons/ Year)',
+        title: 'Sector Emissions Data (Metric Tons/ Year) for {{ area | safe }}',
+        height: 500,
+        bar: { groupWidth: "95%" },
+        legend: { position: "side" },
       };
 
       var chart = new google.visualization.ColumnChart(document.getElementById('chart'));
@@ -40,19 +41,15 @@
   </div>
 {% endfor %}
 
-
+<!-- Message Banner -->
 {% from "helpers/_formHelpers.html" import render_field %}
 <form action="/sectors/select" method="POST" name="chartForm">
   <div class="container">
     <div class="row">
       {{ form.csrf_token }}
-<!-- -------------- , onchange="submitForm(chartForm);" -------------- -->
-      <div class="col-md-4">{{ render_field(form.county) }}</div>
-      <div class="col-md-4">{{ render_field(form.city, onchange="submitForm(chartForm)")}}</div>
-      <div class="col-md-4">{{ render_field(form.zip, onchange="submitForm(chartForm)")}}</div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">{{ form.submit }}</div>
+      <div class="col-md-4">{{ form.county.label }}<br>{{ form.county }}<br>{{ form.countySubmit }}<br></div>
+      <div class="col-md-4">{{ form.city.label }}<br>{{ form.city }}<br>{{ form.citySubmit }}<br></div>
+      <div class="col-md-4">{{ form.zip.label }}<br>{{ form.zip }}<br>{{ form.zipSubmit }}<br></div>
     </div>
   </div>
 </form>
