--- a/server/templates/helpers/base.html
+++ b/server/templates/helpers/base.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    
-    <!-- Used for navbar -->
-    <!-- Bootstrap CSS -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logoTransparant.png') }}">
+    <!-- Used for navbar CDN -->
+    <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <!-- Jquery -->
+    <!-- Jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- Popper Positioning Engine -->
+    <!-- Popper Positioning Engine CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <!-- Bootstrap Javascript -->
+    <!-- Bootstrap Javascript CDN -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
     <!-- CSS -->
@@ -31,8 +31,6 @@
     {% block content %}
     {% endblock %}
 
-<!-- My script, used for dynamic dropdown item switching -->
 <script src="{{ url_for('static', filename='scripts/script.js') }}"></script>
-
 </body>
 </html>
