--- a/server/templates/mainPages/read.html
+++ b/server/templates/mainPages/read.html
@@ -11,28 +11,32 @@
   {{mess}}
   </div>
 {% endfor %}
+<div class="container">
 
 <h1>Read Database Entries</h1>
 
 <h2>Choose a Sector Table:</h2>
-<form action="/sectors/read" method="POST" name="readForm">
-  {{ form.csrf_token }}
-  {% from 'helpers/_formHelpers.html' import render_field %}
-  {{ render_field(form.tables, onchange="submitForm(readForm)") }}
-</form>
-  {% if tableData %}
-  <!-- <form method="POST">
-    {{ form.download }}
-  </form> -->
-  <form action="../../static/data/{{ tableName | safe }}.xls">
-    <button type="submit">Download!</button>
- </form>
+<div id="row">
+  <div class="col-sm-5 col-md-6">
+  <form action="/sectors/read" method="POST" name="readForm">
+    {{ form.csrf_token }}
+    {% from 'helpers/_formHelpers.html' import render_field %}
+    {{ render_field(form.tables, onchange="submitForm(readForm)") }}
+  </form>
+</div>
+<div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+    {% if tableData %}
+    <form action="../../static/data/{{ tableName | safe }}.xls">
+      <button type="submit" class="btn btn-primary">Download Data</button>
+  </form>
   {% endif %}
+</div>
+
+</div>
 
 
 
 {% if tableData %}
-<div class="container">
   <h2>{{ tableName }}</h2>
   <table class="styled-table">
       <tr>
