--- a/server/templates/mainPages/recommendations.html
+++ b/server/templates/mainPages/recommendations.html
@@ -1,51 +1,49 @@
 {% extends "helpers/base.html" %}
 {% block title %} Recommended Actions {% endblock %}
 {% block content %}
+<div class="container">
 <h3>Recommended Actions</h3>
   <p>Recommended Actions will list an explanation of all recommended actions and their impact. It shows the general recommendations we will provide on the website as well as our sources for all recommendations. Finally it will have links to other actions and resources.</p>
-  <!-- Checkbox Filters for Holistic Metrics and -->
+  <!-- Checkbox Filters for Holistic Metrics -->
+
   <div class="row">
-    <div class="column">
-      <br>
-      <h2> Filter by Holistic Community Metric</h2>
+    <div class="col-sm-5 col-md-6">
+      <h3>Filter by Holistic Community Metric</h3>
       <p>I want to see solutions that support: </p>
-      <input type="checkbox" id="filter1" name="filter1" value="Equity">
-      <label for="filter1"> Equity</label><br>
-      <input type="checkbox" id="filter2" name="filter2" value="Local Environmental Quality">
-      <label for="filter2"> Local Environmental Quality</label><br>
-      <input type="checkbox" id="filter3" name="filter3" value="Enhancing Public Health & Safety">
-      <label for="filter3"> Enhancing Public Health and Safety</label><br>
-      <input type="checkbox" id="filter4" name="filter4" value="Building Community Resilience">
-      <label for="filter4"> Building Community Resilience</label><br>
-      <br>
-    </div>
-    <div class="column">
-      <br>
-      <h2>Filter by Emissions Sector</h2>
+     </div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+      <h3>Filter by Emissions Sector</h3>
       <p>I want to see solutions that reduce emissions from: </p>
-      <input type="checkbox" id="filter5" name="filter5" value="Cement and Manufacturing">
-      <label for="filter5"> Cement and Manufacturing</label><br>
-      <input type="checkbox" id="filter6" name="filter6" value="Waste">
-      <label for="filter6"> Waste</label><br>
-      <input type="checkbox" id="filter7" name="filter7" value="Energy - Electricity">
-      <label for="filter7"> Energy - Electricity</label><br>
-      <input type="checkbox" id="filter8" name="filter8" value="Energy - Natural Gas">
-      <label for="filter8"> Energy - Natural Gas</label><br>
-      <input type="checkbox" id="filter9" name="filter9" value="Transportation">
-      <label for="filter9"> Transportation</label><br>
-      <br>
     </div>
   </div>
-
-  <!--Filter Solutions-->
-<!-- </form>
-  <form action="xxx.php" method="post">
-</form> -->
-
-  <p>List of Solutions Selected for your Community</p>
+  <form action="/recommendations" method="POST">
+  <div class="row">
+    <div class="col-sm-5 col-md-6">{{ form.equity.label }}{{ form.equity }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.cementMan.label }}{{ form.cementMan }}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 col-md-6">{{ form.envQuality.label }}{{ form.envQuality }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.envQuality.label }}{{ form.envQuality }}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 col-md-6">{{ form.healthSafety.label }}{{ form.healthSafety }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.electricity.label }}{{ form.electricity }}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 col-md-6">{{ form.resilience.label }}{{ form.resilience }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.naturalGas.label }}{{ form.naturalGas }}</div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 col-md-6">{{ form.submit }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.transportation.label }}{{ form.transportation }}</div>
+  </div>
+  </form>
+  <h1>List of Solutions Selected for your Community</h1>
   <!--TODO Display Recommendations Based on Filters and Emissions/Metrics Data-->
-</div> 
+  <p>User input along with data for user region will be filtered through an algorithm, 
+    or a "list of steps", to decide the top recommended action for the user</p>
+  <h3>Algorithm score: {{ count }}</h3>
+</div>
 
-
-  {% endblock %}
+{% endblock %}
 
