--- a/server/templates/mainPages/select.html
+++ b/server/templates/mainPages/select.html
@@ -5,11 +5,6 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" ></script>
 <script type="text/javascript">
-    var testData = [['Sector', 'GHG Emissions'],
-                    ['cement_and_manufacturing',9681.44],
-                    ['waste',8679.21],
-                    ['electricity_commercial',28126.09328]];
-
     google.charts.load("current", {packages:["corechart"]});
     google.charts.setOnLoadCallback(drawChart);
     function drawChart() {
@@ -59,5 +54,9 @@
   <h3>All Sector GHG Data Chart</h3>
   <div id="chart"></div>
 </div>
-{% endif %} 
+{% endif %}
+
+<!-- My script, used for dynamic dropdown item switching -->
+<script src="{{ url_for('static', filename='scripts/dynamicOptions.js') }}"></script>
+
 {% endblock %}
