iframe viewport unit change

--- a/server/templates/mainPages/emissions.html
+++ b/server/templates/mainPages/emissions.html
@@ -5,8 +5,9 @@
   <h1>Emissions Estimation</h1>
 
   <p>Interactive map displays pie-chart data for every zip code region in Colorado</p> 
+
+<iframe src="http://tinyfeettoolkit.com/map/" style="height:100vh;width:100%;" title=""></iframe>
 </div>
 
-<iframe src="http://tinyfeettoolkit.com/map/" style="height:75vw;width:100%;" title="Iframe Example"></iframe>
 {% endblock %}
 
