--- a/server/templates/mainPages/emissions.html
+++ b/server/templates/mainPages/emissions.html
@@ -1,13 +1,12 @@
 {% extends "helpers/base.html" %}
 {% block title %} Emissions {% endblock %}
 {% block content %}
+
 <div class="container">
   <h1>Emissions Estimation</h1>
 
-  <p>Interactive map displays pie-chart data for every zip code region in Colorado</p> 
-
-<iframe src="http://tinyfeettoolkit.com/map/" style="height:100vh;width:100%;" title=""></iframe>
+<!-- iframe does not work on host -->
+<!-- <iframe src="http://tinyfeettoolkit.com/map/" style="height:100vh;width:100%;" title=""></iframe> -->
 </div>
-
 {% endblock %}
 
