--- a/server/templates/mainPages/select.html
+++ b/server/templates/mainPages/select.html
@@ -37,7 +37,7 @@
 {% endfor %}
 
 <!-- Message Banner -->
-<form action="/sectors/select" method="POST" name="chartForm">
+<form action="/emissions/select" method="POST" name="chartForm">
   <div class="container">
     <div class="row">
       {{ form.csrf_token }}
