Added diffChart functionality

--- a/server/templates/mainPages/map.html
+++ b/server/templates/mainPages/map.html
@@ -44,7 +44,7 @@
 </div>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="{{ url_for('static', filename='map/map.js') }}"></script>
+<script src="{{ url_for('static', filename='map/zipMap.js') }}"></script>
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVO9N4Qdj5bxyyVo6B9QqGFfJxfOTHr3w&callback=initMap">
 </script>
