--- a/server/templates/helpers/navbar.html
+++ b/server/templates/helpers/navbar.html
@@ -46,10 +46,10 @@
           <a class="dropdown-item" href="/emissions/read">Read Tables</a>
           <!-- ANOTHER DIVISION IN THE DROPDOWN -->
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/emissions/select">Chart Data</a>
+          <a class="dropdown-item" href="/emissions/map">Map Data</a>
           <!-- ANOTHER DIVISION IN THE DROPDOWN -->
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/emissions/map">Map Data</a>
+          <a class="dropdown-item" href="/emissions/chart">Chart Data and Compare</a>
         </div>
         
       </li>
@@ -66,7 +66,7 @@
     </ul>
 
     <!-- CAN EVEN ADD A SEARCH FORM -->
-    <form action="{{ url_for('emissions.select') }}" method="POST" class="form-inline my-2 my-lg-0">
+    <form action="{{ url_for('emissions.chart') }}" method="POST" class="form-inline my-2 my-lg-0">
       <input
         class="form-control mr-sm-2"
         type="number"
