Minor changes based on feedback

--- a/server/templates/helpers/navbar.html
+++ b/server/templates/helpers/navbar.html
@@ -40,16 +40,16 @@
 
         <!-- ONE DIVISION IN THE DROPDOWN -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/emissions">Emissions</a>
-          <!-- ANOTHER DIVISION IN THE DROPDOWN -->
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/emissions/read">Read Tables</a>
+          <a class="dropdown-item" href="/emissions">Emissions Overview</a>
           <!-- ANOTHER DIVISION IN THE DROPDOWN -->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/emissions/map">Map Data</a>
           <!-- ANOTHER DIVISION IN THE DROPDOWN -->
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/emissions/chart">Chart Data and Compare</a>
+          <a class="dropdown-item" href="/emissions/chart">Chart Data</a>
+          <!-- ANOTHER DIVISION IN THE DROPDOWN -->
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/emissions/read">View Tables</a>
         </div>
         
       </li>
