Recommendation Filters Working Fully, Resource Page Link and Files Populated, Temp Feedback Tab added with survey

--- a/server/templates/helpers/navbar.html
+++ b/server/templates/helpers/navbar.html
@@ -59,7 +59,10 @@
       </li>
       <!-- HERE IS ANOTHER ONE, BUT THE LINK DOESNT "LOOK" ACTIVE -->
       <li class="nav-item">
-        <a class="nav-link" href="/news">News</a>
+        <a class="nav-link" href="/resources">Resources</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/feedback">Feed Back</a>
       </li>
 
 
