--- a/server/templates/mainPages/recommendations.html
+++ b/server/templates/mainPages/recommendations.html
@@ -4,6 +4,7 @@
 <div class="container">
 <h3>Recommended Actions</h3>
   <p>Recommended Actions will list an explanation of all recommended actions and their impact. It shows the general recommendations we will provide on the website as well as our sources for all recommendations. Finally it will have links to other actions and resources.</p>
+  <p>To use the filtering, one box in Holistic Community Metric and one box in Emissions Sector must be checked.</p>
   <!-- Checkbox Filters for Holistic Metrics -->
 
   <div class="row">
@@ -23,23 +24,21 @@
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.equity.label }}{{ form.equity }}</div>
-    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.cementMan.label }}{{ form.cementMan }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.transportation.label }}{{ form.transportation }}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.econSus.label }}{{ form.econSus }}</div>
-    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.waste.label }}{{ form.waste }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.energy.label }}{{ form.energy }}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.envQuality.label }}{{ form.envQuality }}</div>
-    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.electricity.label }}{{ form.electricity }}</div>
+    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.waste.label }}{{ form.waste }}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.healthSafety.label }}{{ form.healthSafety }}</div>
-    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.naturalGas.label }}{{ form.naturalGas }}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.resilience.label }}{{ form.resilience }}</div>
-    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">{{ form.transportation.label }}{{ form.transportation }}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 col-md-6">{{ form.submit }}</div>
