Did what Eric asked

--- a/server/templates/mainPages/recommendations.html
+++ b/server/templates/mainPages/recommendations.html
@@ -44,13 +44,13 @@
     <div class="col-sm-5 col-md-6">{{ form.submit }}</div>
   </div>
   </form>
-  <h1>List of Solutions Selected for your Community</h1>
+  <h1>List of Recommendations Selected for your Community</h1>
   <!--TODO Display Recommendations Based on Filters and Emissions/Metrics Data-->
-  <p>User input along with data for user region will be filtered through an algorithm, 
-    or a "list of steps", to decide the top recommended action for the user</p>
+  <!--<p>User input along with data for user region will be filtered through an algorithm, 
+    or a "list of steps", to decide the top recommended action for the user</p>-->
   
   {% if tableData %}
-  <h3>Recommendations</h3>
+  <!--<h3>Recommendations</h3>-->
   <table class="styled-table">
       <tr>
         {% for column in columnNames %}
