--- a/server/templates/mainPages/recommendations.html
+++ b/server/templates/mainPages/recommendations.html
@@ -1,6 +1,18 @@
 {% extends "helpers/base.html" %}
 {% block title %} Recommended Actions {% endblock %}
 {% block content %}
+
+{# get_flashed_messages() is auto sent to the template with the flash() call #}
+{% for mess in get_flashed_messages()  %}
+<!-- Message Banner -->
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close" class="fade close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  {{mess}}
+  </div>
+{% endfor %}
+
 <div class="container">
 <h3>Recommended Actions</h3>
   <p>Recommended Actions will list an explanation of all recommended actions and their impact. It shows the general recommendations we will provide on the website as well as our sources for all recommendations. Finally it will have links to other actions and resources.</p>
@@ -44,13 +56,10 @@
     <div class="col-sm-5 col-md-6">{{ form.submit }}</div>
   </div>
   </form>
-  <h1>List of Recommendations Selected for your Community</h1>
-  <!--TODO Display Recommendations Based on Filters and Emissions/Metrics Data-->
-  <!--<p>User input along with data for user region will be filtered through an algorithm, 
-    or a "list of steps", to decide the top recommended action for the user</p>-->
   
   {% if tableData %}
-  <!--<h3>Recommendations</h3>-->
+  <br>
+  <h1>List of Recommendations Selected for your Community</h1>
   <table class="styled-table">
       <tr>
         {% for column in columnNames %}
