Content to Home, Emissions, Recommendations

--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -3,25 +3,91 @@
 {% block navbar %}{% endblock%}
 {% block content %}
 <div class="container">
-<h1>Home</h1>
-<p>Home will have general information about us and the project. This includes Background Information, an Overview, and Instructions</p>
-<br>
-<p>Background Information
-<br>
-<p>Toolkit Overview
-<br>
-<p>Instructions
-<br>
-<p>About Us</p>
-<div class="row">
-  <div class="column">
-    <div id="center"><p>Valeda and Eric...</p></div>
+  <center>
+    <h1>Tiny Feet Climate Action Planning (CAP)</h1>
+    <h2>A Toolkit for Communities</h2>
+  </center>
+  <br>
+  <h4>Project Description</h4>
+  <p>The goal of the Tiny Feet Toolkit is to help communities kickstart the Climate Action Plan (CAP) process. A CAP is
+    a set of solutions and guidelines communities will follow to help reduce their carbon footprint. The initial phase
+    of the standard CAP development process is an assessment of the greenhouse gas (GHG) emissions sources in the
+    community, known as an emissions inventory. With the process requiring arduous source data collection and general
+    understanding of climate science, the cost to perform this initial step inhibits many communities from pursuing
+    climate action. In addition, the time spent performing an emissions inventory delays any environmental improvement
+    recognized through action implementation. As a result, the Tiny Feet team created a toolkit for communities to
+    access an estimation of their GHG emissions calculated from free public data. The Tiny Feet team encourages
+    communities to use the toolkit to help ease their path in creating their CAP.</p>
+  <p>*Disclaimer* The data displayed is an estimation intended to help user in the initiating their CAP process. The
+    information provided by the toolkit is NOT a comprehensive emissions inventory for the selected area.</p>
+  <br>
+  <p>Why is creating a community Climate Action Plan important in reducing global warming?</p>
+  <p>The UN Environment Program and the Intergovernmental Panel on Climate Change (IPCC) advise that global greenhouse
+    gas (GHG) emissions need to be cut by over half by 2030 in order to keep warming below a 1.5° C threshold, a
+    critical tipping point that if exceeded would have catastrophic consequences to all planetary systems. The primary
+    source of GHG emissions is the burning of fossil fuels to generate electricity, create heat, and run vehicles. GHG
+    are also generated from the decomposition of waste in landfills. Internationally municipalities are committing to
+    climate responsibility; in 2019, 77 countries and over 100 cities committed to net-zero carbon emissions by 2050 at
+    the international Climate Action Summit. Unfortunately, the current commitments by cities and countries to net-zero
+    emissions only get us about halfway to the emissions reductions necessary. This means that to best our chances for
+    limiting the effects of global warming, CAPs need to increase drastically both in number and in effectivity.
+    Simultaneously the effects of climate change and inequity are demanding immediate attention which GHG emissions
+    reductions goals alone often fail to prioritize.</p>
+  <br>
+  <h4>User Description</h4>
+  <p>The toolkit is designed to allow the users to select the county, city, or zip-code of interest within Colorado. The
+    data is available in three different views. The first view is a map showing the average GHG emissions per person in
+    each municipality. The second view allows users to input their county, city, or zip to display their emissions data
+    per sector in chart form. The final view is a table consisting of the full dataset of calculated GHG emissions from
+    each sector for a selected county, city, or zip code. The data shows the three major sectors in GHG emissions,
+    Energy, Transportation, and Waste. The user can then press the recommendations link to look at a list of solutions
+    in decreasing their GHG emissions. The recommendations list can also be filtered by societal co-benefits created by
+    particular actions.</p>
+  <p>*Disclaimer* The data displayed is an estimation intended to help user in the initiating their CAP process. The
+    information provided by the toolkit is NOT a comprehensive emissions inventory for the selected area.</p>
+  <br>
+  <h6>Instruction: Recommendation's Page</h6>
+  <p>1. Click on the check boxes to decide what types of data you would like to see. Select from the metrics and/or
+    sectors of emissions.</p>
+  <p>2. Click on the select all options to look at the full list of recommendations.</p>
+  <br>
+  <h4>About Our Team</h4>
+  <p>Our team is a collaboration of students from Western Colorado University and Colorado School of Mines.</p>
+  <p>Valeda Scriber</p>
+  <!-- <div id="center"><img src="../static/img/valeda.jpg" alt="Valeda" width="200"></div> -->
+  <p>After 15 years as an aerospace engineer and program manager building, testing, and launching satellites, Valeda
+    decided to shift her career focus to contributing to the ever-escalating issue of climate change. To expand her
+    knowledge of environmental issues she spent two years travelling and volunteering internationally. Eventually she
+    enrolled at Western Colorado University to join their Master of Environmental Management program with a focus in
+    Sustainable and Resilient Communities. She assisted Eagle County with emissions forecasting of climate actions and
+    updated Park City’s emissions inventory as a part of the Mountain Town 2030 (MT2030) cohort. These efforts
+    highlighted the cost, effort duration of a standard GHG emissions inventory and thus the concept of the Tiny Feet
+    CAP toolkit emerged.</p>
+  <br>
+  <p>Eric Swanson</p>
+  <!-- <div id="center"><img src="../static/img/eric.jpg" alt="Eric" width="200"></div> -->
+  <p>Eric is a non-traditional student studying Computer Science at Western Colorado University who has a bachelors in
+    Media and Communications.</p>
+  <br>
+  <p>Gillian Yost</p>
+  <!-- <div id="center"><img src="../static/img/gillian.png" alt="Gillian" width="200"></div> -->
+  <p>Gillian Yost is currently a senior at Colorado School of Mines where she is majoring in Electrical Engineering with
+    double minors in Computer Science and Public Affairs. In the last two years of her degree, Gillian shifted her focus
+    to more of the software portion of Electrical Engineering and as a result, next year in Fall 2021, Gillian will be
+    pursuing a Master of Science in Software Engineering at University of Texas in Austin. </p>
+  <div class="row">
+    <div class="column">
+      <div id="center">
+        <p>Valeda and Eric...</p>
+      </div>
       <div id="center"><img src="../static/img/madJack.png" alt="Western Logo" width="200"></div>
-  </div>
-  <div class="column">
-    <div id="center"><p>The 30 Percent Senior Design Team...</p></div>
+    </div>
+    <div class="column">
+      <div id="center">
+        <p>The 30 Percent Senior Design Team...</p>
+      </div>
       <div id="center"><img src="../static/img/blasterSmall.png" alt="Blaster Logo" width="200"></div>
+    </div>
   </div>
-</div>
 </div>
 {% endblock %}
